@@ -51,6 +51,8 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
       and SIGUSR2.
     - x2goclient.cpp: fix failing exec() call for the UNIX helper utility:
       correctly terminate arguments vector.
+    - {appdialog,configwidget,onmainwindow,unixhelper}.cpp: fix some compile
+      warnings with GCC. Fix a few whitespace issues.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
